# gstreamer-h264-gcc-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  install.sh
include/: gcc_controller.h  gst_compat.h
src/: demo.cpp  gcc_controller.cpp  receiver.cpp  sender.cpp
